; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sctp/extr_sm_sideeffect.c_sctp_cmd_setup_t4.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sctp/extr_sm_sideeffect.c_sctp_cmd_setup_t4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sctp_association = type { i32* }
%struct.sctp_chunk = type { %struct.sctp_transport* }
%struct.sctp_transport = type { i32 }

@SCTP_EVENT_TIMEOUT_T4_RTO = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, %struct.sctp_association*, %struct.sctp_chunk*)* @sctp_cmd_setup_t4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sctp_cmd_setup_t4(i32* %0, %struct.sctp_association* %1, %struct.sctp_chunk* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.sctp_association*, align 8
  %6 = alloca %struct.sctp_chunk*, align 8
  %7 = alloca %struct.sctp_transport*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.sctp_association* %1, %struct.sctp_association** %5, align 8
  store %struct.sctp_chunk* %2, %struct.sctp_chunk** %6, align 8
  %8 = load %struct.sctp_association*, %struct.sctp_association** %5, align 8
  %9 = load %struct.sctp_chunk*, %struct.sctp_chunk** %6, align 8
  %10 = getelementptr inbounds %struct.sctp_chunk, %struct.sctp_chunk* %9, i32 0, i32 0
  %11 = load %struct.sctp_transport*, %struct.sctp_transport** %10, align 8
  %12 = call %struct.sctp_transport* @sctp_assoc_choose_alter_transport(%struct.sctp_association* %8, %struct.sctp_transport* %11)
  store %struct.sctp_transport* %12, %struct.sctp_transport** %7, align 8
  %13 = load %struct.sctp_transport*, %struct.sctp_transport** %7, align 8
  %14 = getelementptr inbounds %struct.sctp_transport, %struct.sctp_transport* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.sctp_association*, %struct.sctp_association** %5, align 8
  %17 = getelementptr inbounds %struct.sctp_association, %struct.sctp_association* %16, i32 0, i32 0
  %18 = load i32*, i32** %17, align 8
  %19 = load i64, i64* @SCTP_EVENT_TIMEOUT_T4_RTO, align 8
  %20 = getelementptr inbounds i32, i32* %18, i64 %19
  store i32 %15, i32* %20, align 4
  %21 = load %struct.sctp_transport*, %struct.sctp_transport** %7, align 8
  %22 = load %struct.sctp_chunk*, %struct.sctp_chunk** %6, align 8
  %23 = getelementptr inbounds %struct.sctp_chunk, %struct.sctp_chunk* %22, i32 0, i32 0
  store %struct.sctp_transport* %21, %struct.sctp_transport** %23, align 8
  ret void
}

declare dso_local %struct.sctp_transport* @sctp_assoc_choose_alter_transport(%struct.sctp_association*, %struct.sctp_transport*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
